...
                                                                <rect key="frame" x="88" y="0.0" width="244" height="79"/>
                                                                <subviews>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="EXPLORE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsF
                                                                        <rect key="frame" x="0.0" y="0.0" width="135.66666666666666" height="38.333333333333336"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
...
                                                                        </userDefinedRuntimeAttributes>
                                                                    </label>
                                                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Explore the world for new travel opportunities" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizing
                                                                        <rect key="frame" x="0.0" y="38.333333333333343" width="244" height="40.666666666666657"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                                <rect key="frame" x="88" y="0.0" width="196" height="80"/>
                                                                <subviews>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="PLAN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFont
                                                                        <rect key="frame" x="0.0" y="0.0" width="196" height="52"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="400" height="79"/>
                                                        <subviews>
                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="remember" translatesAutoresizingMaskIntoConstraints="NO" id="c2i-Ab-fxi">
                                                                <rect key="frame" x="0.0" y="0.0" width="80" height="79"/>
                                                                <constraints>
...
                                                                <rect key="frame" x="88" y="0.0" width="312" height="79"/>
                                                                <subviews>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="REMEMBER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjusts
                                                                        <rect key="frame" x="0.0" y="0.0" width="312" height="38.333333333333336"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
...
                                                                        </userDefinedRuntimeAttributes>
                                                                    </label>
                                                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Capture your memories in the travel gallery" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMas
                                                                        <rect key="frame" x="0.0" y="38.333333333333371" width="312" height="40.666666666666657"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <items>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="nqL-bw-u2e"/>
                                    <barButtonItem title="Sign out" id="h4T-1g-JjQ">
                                        <connections>
                                            <action selector="signOut:" destination="VGg-jM-tTd" id="v8y-o8-PFa"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tfX-rD-jiP">
                                                    <rect key="frame" x="91" y="31.333333333333332" width="32.666666666666664" height="14.333333333333334"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConst
                                                <rect key="frame" x="64" y="0.0" width="48" height="30"/>
                                                <state key="normal" title="Cancel">
...
                                        <rect key="frame" x="8" y="8" width="464" height="1892.3333333333333"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" text="Place" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translate
                                                <rect key="frame" x="0.0" y="0.0" width="58.666666666666664" height="26.333333333333332"/>
                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
...
                                                                </userDefinedRuntimeAttributes>
                                                            </label>
