...
"synagogue" = "Synagogue";
"travelAgency" = "Travel agency";
"zoo" = "Zoo";
"planTrip" = "Plan trip";
"changeDate" = "Change Date";
"addPlaceSearch" = "Add Place";
"welcome" = "Welcome, %@";
"about" = "About";
"settings" = "Settings";
"permissions" = "Permissions";
"notifications" = "Notifications";
"profile" = "Profile";
"createAccount" = "Konto erstellen";
...
